--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <div class="titles">
                 <span>&#x25BC; <strong>New Task</strong></span>
             </div>
-            <div class="voci">
-                <span>✅ Quarterly Newsletter</span> <button class="blue-button">Editorial</button>
-            </div>
+            <ul class="voci">
+                <li><span class="check">&check;</span> Quarterly Newsletter <button class="blue-button">Editorial</button></li>
+            </ul>
         </section>
 
         <!--Today-->
@@ -36,18 +36,12 @@
             <div class="titles">
                 <span>&#x25BC; <strong>Today</strong></span>
             </div>
-            <div class="voci">
-                <span>✅ Recruiting blog post</span> <button id="button2">Editorial</button>
-            </div>
-            <div class="voci">
-                <span>✅ Mobile app launch</span> <button id="button3">Q1 Goals</button>
-            </div>
-            <div class="voci">
-                <span>&#10060; Interview John H.</span> <button id="button4">Recruiting</button>
-            </div>
-            <div class="voci">
-                <span>✅ Summit update to mobile storefronts</span> <button id="button5">Mobile</button>
-            </div>
+            <ul class="voci">
+                <li><span class="check">&check; </span> Recruiting blog post <button id="button2">Editorial</button></li>
+                <li><span class="check">&check; </span> Mobile app launch <button id="button3">Q1 Goals</button></li>
+                <li><span class="cross">&cross; </span> Interview John H. <button id="button4">Recruiting</button></li>
+                <li><span class="check">&check; </span> Summit update to mobile storefronts <button id="button5">Mobile</button></li>
+            </ul>
         </section>
 
         <!--Upcoming-->
@@ -55,18 +49,12 @@
             <div class="titles">
                 <span>&#x25BC; <strong>Upcoming</strong></span>
             </div>
-            <div class="voci">
-                <span>&#10060; Schedule meeting with Alex</span>
-            </div>
-            <div class="voci">
-                <span>✅ Homepage refresh</span> <button id="button6">Website</button>
-            </div>
-            <div class="voci">
-                <span>✅ Onboard new Sales team members</span> <button id="button7">Sales</button>
-            </div>
-            <div class="voci">
-                <span>✅ Summit update to mobile storefronts</span> <button class="blue-button">Editorial</button>
-            </div>
+            <ul class="voci">
+                <li id="emarginato"><span class="cross">&cross; </span>Schedule meeting with Alex</li>
+                <li><span class="check">&check; </span> Homepage refresh <button id="button6">Website</button></li>
+                <li><span class="check">&check; </span> Onboard new Sales team members <button id="button7">Sales</button></li>
+                <li><span class="check">&check; </span> Summit update to mobile storefronts <button class="blue-button">Editorial</button></li>
+            </ul>
         </section>
     </main>
     
