circles added + design edits

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span>&#x25BC; <strong>New Task</strong></span>
             </div>
             <ul class="voci">
-                <li><span class="check">&check;</span> Quarterly Newsletter <button class="blue-button">Editorial</button></li>
+                <li><span class="circle check">&check;</span> Quarterly Newsletter <button class="blue-button">Editorial</button></li>
             </ul>
         </section>
 
@@ -37,10 +37,10 @@
                 <span>&#x25BC; <strong>Today</strong></span>
             </div>
             <ul class="voci">
-                <li><span class="check">&check; </span> Recruiting blog post <button id="button2">Editorial</button></li>
-                <li><span class="check">&check; </span> Mobile app launch <button id="button3">Q1 Goals</button></li>
-                <li><span class="cross">&cross; </span> Interview John H. <button id="button4">Recruiting</button></li>
-                <li><span class="check">&check; </span> Summit update to mobile storefronts <button id="button5">Mobile</button></li>
+                <li><span class="circle check">&check;</span> Recruiting blog post <button id="button2">Editorial</button></li>
+                <li><span class="circle check">&check;</span> Mobile app launch <button id="button3">Q1 Goals</button></li>
+                <li><span class="circle cross">&cross;</span> Interview John H. <button id="button4">Recruiting</button></li>
+                <li><span class="circle check">&check;</span> Summit update to mobile storefronts <button id="button5">Mobile</button></li>
             </ul>
         </section>
 
@@ -50,10 +50,10 @@
                 <span>&#x25BC; <strong>Upcoming</strong></span>
             </div>
             <ul class="voci">
-                <li id="emarginato"><span class="cross">&cross; </span>Schedule meeting with Alex</li>
-                <li><span class="check">&check; </span> Homepage refresh <button id="button6">Website</button></li>
-                <li><span class="check">&check; </span> Onboard new Sales team members <button id="button7">Sales</button></li>
-                <li><span class="check">&check; </span> Summit update to mobile storefronts <button class="blue-button">Editorial</button></li>
+                <li id="emarginato"><span class="circle cross">&cross;</span> Schedule meeting with Alex</li>
+                <li><span class="circle check">&check;</span> Homepage refresh <button id="button6">Website</button></li>
+                <li><span class="circle check">&check;</span> Onboard new Sales team members <button id="button7">Sales</button></li>
+                <li><span class="circle check">&check;</span> Summit update to mobile storefronts <button class="blue-button">Editorial</button></li>
             </ul>
         </section>
     </main>
